ajout d'un test d'animation avec CSS

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
         
 		
 		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="./test.css">
 
 	</head>
 	
@@ -17,5 +18,18 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
-	
+		<div id="animation-wow">
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+			<p id="lorem_ipsum">
+				Ma couleur de naissance c'est aquamarine :) 
+			</p>
+		</div>
 </body></html>
