--- a/hello.html
+++ b/hello.html
@@ -28,8 +28,16 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 
+			<!-- Rien a dire la dessus -->
+			<h1>Mamasita</h1>
 			<p id="lorem_ipsum">
 				Ma couleur de naissance c'est aquamarine :) 
+			</p>
+
+						<!-- Rien a dire la dessus -->
+			<h1>Momosito</h1>
+			<p id="lorem_ipsum">
+				mange dla shnoot :) 
 			</p>
 		</div>
 </body></html>
