ajout du gist hello.c

--- a/hello.html
+++ b/hello.html
@@ -40,4 +40,7 @@
 				mange dla shnoot :) 
 			</p>
 		</div>
+
+		<!-- Mon gist -->
+		<script src="https://gist.github.com/shadowaress/fb16c451272bdca21ebfcae065a3e198.js"></script>
 </body></html>
