ajout d'un titre

--- a/hello.html
+++ b/hello.html
@@ -34,12 +34,19 @@
 				Ma couleur de naissance c'est aquamarine :) 
 			</p>
 
-						<!-- Rien a dire la dessus -->
+
 			<h1>Momosito</h1>
 			<p id="lorem_ipsum">
 				mange dla shnoot :) 
 			</p>
 		</div>
+
+		<div>
+			<h1>Rewards</h1>
+			<p><img src=""></p>
+		</div>
+		
+
 
 		<!-- Mon gist -->
 		<script src="https://gist.github.com/shadowaress/fb16c451272bdca21ebfcae065a3e198.js"></script>
